[project]
name = "comfyui-get-random-file"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ChrisColeTech/ComfyUI-Get-Random-File"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Get-Random-File"
Icon = ""
