[project]
name = "comfyui-get-random-file"
description = "🚀 Picks a random IMAGE file from a directory and provides you with the IMAGE and its filepath as a STRING. This awesome tool brings a touch of randomness to your files and images, making your file management tasks a breeze."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ChrisColeTech/ComfyUI-Get-Random-File"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "chriscoletech"
DisplayName = "ComfyUI-Get-Random-File"
Icon = "🎲"
